stop scroll bounce on safari

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  position: fixed;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
